# simplematrixbotlib

./: .gitignore  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
doc/: .readthedocs.yaml  conf.py  index.rst  quickstart.md  requirements.txt
doc/manual/: api.md
docs/: index.html  quickstart.md  search.js  simplematrixbotlib.html
docs/manual/: api.md  config.md
docs/simplematrixbotlib/: bot.html  callbacks.html  creds.html  defaults.html  deps.html  eval_me.html  handler.html  listeners.html  message.html  room.html  run.html
examples/: echo.py  echo_e2ee.py  echo_reaction.py  high_fives.py  reply.py  rock_paper_scissors.py
examples/config-files/: config_bot.py  config_bot_allowed.py  config_bot_allowed_interactive.py  config_custom.py
examples/docker-example/: Dockerfile
simplematrixbotlib/: __init__.py  api.py  auth.py  bot.py  callbacks.py  config.py  creds.py  defaults.py  deps.py  eval_me.py  examples.py  handler.py  listener.py  listeners.py  match.py  message.py  middleware.py  room.py  run.py
simplematrixbotlib_old/: __init__.py  api.py  auth.py  bot.py  config.py  creds.py  match.py
src/simplematrixbotlib/: api.py  auth.py  bot.py  callbacks.py  config.py  crypto.py
src/simplematrixbotlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/api/: _test_api.py
tests/config/: _test_config.py  test_config.py
tests/integration/api/: test_api.py
tests/listener/: _test_listener.py
tests/match/: _test_match.py  _test_messagematch.py
tests/unit/config/: test_config.py
tests/unit/config/sample_config_files/: config_tmp.toml
tests/unit/match/: test_messagematch.py
tests/v3/: test_v3_config.py  test_v3_listener.py  test_v3_parser.py
