[project]
name = "simplematrixbotlib"
version = "2.12.3"
description = "An easy to use bot library for the Matrix ecosystem written in Python."
authors = [
  {name = "imbev", email = "imbev@protonmail.com"},
]
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
dependencies = [
  "matrix-nio>=0.24",
  "python-cryptography-fernet-wrapper>=1.0.4",
  "markdown>=3.3",
  "toml>=0.10.2",
  "cryptography>=46.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "bandit>=1.8.6",
    "mypy>=1.19.0",
    "pre-commit>=4.3.0",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "pytest-socket>=0.7.0",
    "twine>=6.2.0",
    "types-aiofiles>=25.1.0.20251011",
    "types-markdown>=3.10.0.20251106",
    "types-toml>=0.10.8.20240310",
    "wheel>=0.45.1",
    "yapf>=0.43.0",
]

[tool.pytest]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "--disable-socket", "--allow-unix-socket"]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

